--- a/staticfiles/css/stay_sharp/Choose-the-angle.css
+++ b/staticfiles/css/stay_sharp/Choose-the-angle.css
@@ -1,6 +1,5 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
-  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -17,62 +16,20 @@
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 10px 20px;
-}
-
-.u-section-1 .u-group-1 {
-  min-height: 460px;
-  height: auto;
-  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
-  background-image: none;
-  width: 303px;
-  margin: 50px auto 0;
-}
-
-.u-section-1 .u-container-layout-2 {
-  padding: 10px 0;
-}
-
-.u-section-1 .u-text-1 {
-  width: 148px;
-  font-size: 1.125rem;
-  font-weight: 700;
-  margin: 7px auto 0;
-}
-
-.u-section-1 .u-text-2 {
-  font-size: 1rem;
-  margin: 15px 10px 0;
-}
-
-.u-section-1 .u-text-3 {
-  font-size: 1rem;
-  margin: 32px 10px 0;
-}
-
-.u-section-1 .u-text-4 {
-  font-size: 1rem;
-  margin: 29px 10px 0;
-}
-
-.u-section-1 .u-layout-cell-2 {
-  min-height: 677px;
-}
-
-.u-section-1 .u-container-layout-3 {
   padding: 0;
 }
 
-.u-section-1 .u-text-5 {
+.u-section-1 .u-text-1 {
   background-image: none;
   font-weight: normal;
   font-size: 1.5rem;
-  margin: 10px -21px 0;
+  width: 302px;
+  margin: 0 auto;
 }
 
-.u-section-1 .u-text-6 {
+.u-section-1 .u-text-2 {
   width: 98px;
-  margin: 25px auto 0;
+  margin: 18px auto 0;
 }
 
 .u-section-1 .u-form-1 {
@@ -139,17 +96,17 @@
   padding: 0;
 }
 
-.u-section-1 .u-text-7 {
+.u-section-1 .u-text-3 {
   letter-spacing: 2px;
   font-weight: 400;
   font-size: 1.25rem;
   width: 245px;
-  margin: 9px auto 0;
+  margin: 17px auto 0;
 }
 
-.u-section-1 .u-text-8 {
-  width: 91px;
-  margin: 10px auto 0;
+.u-section-1 .u-text-4 {
+  width: 90px;
+  margin: 20px auto 0;
 }
 
 .u-section-1 .u-form-2 {
@@ -202,31 +159,30 @@
   padding: 0;
 }
 
-.u-section-1 .u-text-9 {
+.u-section-1 .u-text-5 {
   letter-spacing: 2px;
   font-weight: 400;
   font-size: 1.25rem;
-  width: 239px;
-  margin: 7px auto 0;
+  margin: 16px 87px 0 81px;
 }
 
-.u-section-1 .u-layout-cell-3 {
+.u-section-1 .u-layout-cell-2 {
   min-height: 677px;
 }
 
-.u-section-1 .u-container-layout-4 {
+.u-section-1 .u-container-layout-2 {
   padding: 0;
 }
 
-.u-section-1 .u-text-10 {
-  width: 101px;
-  margin: 60px auto 0;
+.u-section-1 .u-text-6 {
+  width: 100px;
+  margin: 74px auto 0;
 }
 
 .u-section-1 .u-form-3 {
   height: 107px;
   width: 280px;
-  margin: 31px auto 0;
+  margin: 19px auto 0;
 }
 
 .u-section-1 .u-form-group-8 {
@@ -260,7 +216,7 @@
   padding: 0;
 }
 
-.u-section-1 .u-text-11 {
+.u-section-1 .u-text-7 {
   letter-spacing: 2px;
   font-weight: 400;
   font-size: 1.25rem;
@@ -268,36 +224,83 @@
   margin: 29px auto 0;
 }
 
-.u-section-1 .u-text-12 {
+.u-section-1 .u-text-8 {
   font-size: 1.5rem;
   font-weight: 400;
   width: 194px;
-  margin: 80px auto 0;
+  margin: 29px auto 0;
 }
 
-.u-section-1 .u-text-13 {
+.u-section-1 .u-text-9 {
   font-size: 1.5rem;
   margin: 54px 59px 0 258px;
 }
 
-.u-section-1 .u-text-14 {
+.u-section-1 .u-text-10 {
   font-weight: normal;
   font-size: 1.25rem;
   margin: -26px 168px 0 70px;
 }
 
-.u-section-1 .u-text-15 {
+.u-section-1 .u-text-11 {
   font-size: 1.25rem;
   font-weight: normal;
   margin: 50px 148px 0 70px;
 }
 
-.u-section-1 .u-text-16 {
+.u-section-1 .u-text-12 {
   font-size: 1.5rem;
   margin: -38px 59px 0 258px;
 }
 
+.u-section-1 .u-layout-cell-3 {
+  min-height: 677px;
+}
+
+.u-section-1 .u-container-layout-3 {
+  padding: 10px 20px;
+}
+
+.u-section-1 .u-group-1 {
+  min-height: 460px;
+  height: auto;
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
+  background-image: none;
+  width: 303px;
+  margin: 49px auto 0;
+}
+
+.u-section-1 .u-container-layout-4 {
+  padding: 10px 0;
+}
+
+.u-section-1 .u-text-13 {
+  width: 148px;
+  font-size: 1.125rem;
+  font-weight: 700;
+  margin: 7px auto 0;
+}
+
+.u-section-1 .u-text-14 {
+  font-size: 1rem;
+  margin: 15px 10px 0;
+}
+
+.u-section-1 .u-text-15 {
+  font-size: 1rem;
+  margin: 32px 10px 0;
+}
+
+.u-section-1 .u-text-16 {
+  font-size: 1rem;
+  margin: 29px 10px 0;
+}
+
 @media (max-width: 1399px) {
+   .u-section-1 {
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-sheet-1 {
     min-height: 808px;
   }
@@ -311,32 +314,7 @@
     min-height: 706px;
   }
 
-  .u-section-1 .u-group-1 {
-    width: 299px;
-    margin-top: 55px;
-    height: auto;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-left: 8px;
-    margin-right: 8px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-left: 8px;
-    margin-right: 8px;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-left: 8px;
-    margin-right: 8px;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 706px;
-  }
-
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-text-1 {
     font-weight: 400;
     width: auto;
     margin-top: 8px;
@@ -344,7 +322,7 @@
     margin-right: -36px;
   }
 
-  .u-section-1 .u-text-6 {
+  .u-section-1 .u-text-2 {
     margin-top: 23px;
   }
 
@@ -352,51 +330,58 @@
     margin-top: 8px;
   }
 
-  .u-section-1 .u-text-8 {
+  .u-section-1 .u-text-4 {
     width: 67px;
-    margin-top: 11px;
+    margin-top: 19px;
   }
 
   .u-section-1 .u-form-2 {
     margin-top: 0;
   }
 
-  .u-section-1 .u-text-9 {
-    width: 235px;
-    margin-top: 12px;
+  .u-section-1 .u-text-5 {
+    width: auto;
+    margin-top: 22px;
+    margin-right: 78px;
+    margin-left: 68px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
+  .u-section-1 .u-layout-cell-2 {
     min-height: 706px;
   }
 
-  .u-section-1 .u-text-10 {
-    margin-top: 58px;
+  .u-section-1 .u-text-6 {
+    margin-top: 87px;
   }
 
   .u-section-1 .u-form-3 {
-    margin-top: 32px;
+    height: 114px;
+    margin-top: 22px;
   }
 
-  .u-section-1 .u-text-12 {
+  .u-section-1 .u-text-7 {
+    margin-top: 35px;
+  }
+
+  .u-section-1 .u-text-8 {
     width: 193px;
   }
 
-  .u-section-1 .u-text-13 {
+  .u-section-1 .u-text-9 {
     width: auto;
     margin-top: 51px;
     margin-right: 49px;
     margin-left: 241px;
   }
 
-  .u-section-1 .u-text-14 {
+  .u-section-1 .u-text-10 {
     font-weight: 400;
     width: auto;
     margin-right: 165px;
     margin-left: 60px;
   }
 
-  .u-section-1 .u-text-15 {
+  .u-section-1 .u-text-11 {
     font-weight: 400;
     width: auto;
     margin-top: 42px;
@@ -404,11 +389,36 @@
     margin-left: 60px;
   }
 
-  .u-section-1 .u-text-16 {
+  .u-section-1 .u-text-12 {
     width: auto;
     margin-top: -36px;
     margin-right: 47px;
     margin-left: 238px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 706px;
+  }
+
+  .u-section-1 .u-group-1 {
+    width: 299px;
+    margin-top: 67px;
+    height: auto;
+  }
+
+  .u-section-1 .u-text-14 {
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+
+  .u-section-1 .u-text-15 {
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+
+  .u-section-1 .u-text-16 {
+    margin-left: 8px;
+    margin-right: 8px;
   }
 }
 
@@ -426,37 +436,13 @@
     min-height: 687px;
   }
 
-  .u-section-1 .u-group-1 {
-    margin-top: 41px;
-    width: 273px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-right: 0;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 687px;
-  }
-
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-text-1 {
     margin-top: 0;
     margin-left: -108px;
     margin-right: -108px;
   }
 
-  .u-section-1 .u-text-6 {
+  .u-section-1 .u-text-2 {
     margin-top: 20px;
   }
 
@@ -469,45 +455,74 @@
     width: 270px;
   }
 
-  .u-section-1 .u-text-9 {
+  .u-section-1 .u-text-5 {
     margin-right: 22px;
     margin-left: 49px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 687px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 76px;
+  }
+
+  .u-section-1 .u-form-3 {
+    margin-top: 28px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 34px;
+  }
+
+  .u-section-1 .u-text-9 {
+    margin-top: 47px;
+    margin-right: 19px;
+    margin-left: 205px;
+  }
+
+  .u-section-1 .u-text-10 {
+    margin-right: 120px;
+    margin-left: 26px;
+  }
+
+  .u-section-1 .u-text-11 {
+    margin-top: 39px;
+    margin-right: 109px;
+    margin-left: 26px;
+  }
+
+  .u-section-1 .u-text-12 {
+    margin-top: -38px;
+    margin-right: 21px;
+    margin-left: 207px;
   }
 
   .u-section-1 .u-layout-cell-3 {
     min-height: 687px;
   }
 
-  .u-section-1 .u-text-10 {
-    margin-top: 48px;
-  }
-
-  .u-section-1 .u-form-3 {
-    height: 114px;
-    margin-top: 31px;
-  }
-
-  .u-section-1 .u-text-13 {
-    margin-top: 47px;
-    margin-right: 19px;
-    margin-left: 205px;
+  .u-section-1 .u-group-1 {
+    margin-top: 57px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-text-14 {
-    margin-right: 120px;
-    margin-left: 26px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-15 {
-    margin-top: 39px;
-    margin-right: 109px;
-    margin-left: 26px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-16 {
-    margin-top: -38px;
-    margin-right: 21px;
-    margin-left: 207px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -522,31 +537,15 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 679px;
+    min-height: 708px;
   }
 
-  .u-section-1 .u-group-1 {
-    min-height: 524px;
-    margin-top: 35px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-text-2 {
-    font-size: 0.875rem;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 679px;
-  }
-
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-text-1 {
     margin-left: -132px;
     margin-right: -132px;
   }
 
-  .u-section-1 .u-text-6 {
+  .u-section-1 .u-text-2 {
     margin-top: 18px;
   }
 
@@ -554,7 +553,7 @@
     width: 230px;
   }
 
-  .u-section-1 .u-text-8 {
+  .u-section-1 .u-text-4 {
     margin-top: 24px;
   }
 
@@ -562,98 +561,92 @@
     width: 230px;
   }
 
-  .u-section-1 .u-text-9 {
-    width: auto;
-    margin-left: 23px;
-    margin-right: 23px;
+  .u-section-1 .u-text-5 {
+    margin-left: 13px;
+    margin-right: 13px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 679px;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 708px;
   }
 
-  .u-section-1 .u-text-10 {
-    margin-top: 45px;
+  .u-section-1 .u-text-6 {
+    margin-top: 74px;
   }
 
   .u-section-1 .u-form-3 {
     width: 230px;
-    margin-top: 6px;
+    margin-top: 8px;
   }
 
-  .u-section-1 .u-text-12 {
+  .u-section-1 .u-text-8 {
     margin-top: 65px;
   }
 
-  .u-section-1 .u-text-13 {
+  .u-section-1 .u-text-9 {
     margin-top: 55px;
     margin-right: 11px;
     margin-left: 173px;
   }
 
-  .u-section-1 .u-text-14 {
+  .u-section-1 .u-text-10 {
     font-size: 1.125rem;
     margin-top: -25px;
     margin-right: 91px;
     margin-left: 20px;
   }
 
-  .u-section-1 .u-text-15 {
+  .u-section-1 .u-text-11 {
     font-size: 1.125rem;
     margin-top: 20px;
     margin-right: 75px;
     margin-left: 20px;
   }
 
-  .u-section-1 .u-text-16 {
+  .u-section-1 .u-text-12 {
     margin-top: -35px;
     margin-right: 11px;
     margin-left: 173px;
   }
-}
 
-@media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1836px;
-  }
-
-  .u-section-1 .u-layout-wrap-1 {
-    margin-bottom: 60px;
-  }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 489px;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 708px;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 395px;
-    margin-top: 0;
+    min-height: 524px;
+    margin-top: 51px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-1 .u-text-2 {
-    font-size: 1rem;
+  .u-section-1 .u-text-14 {
+    font-size: 0.875rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1749px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 692px;
+  .u-section-1 .u-layout-wrap-1 {
+    margin-bottom: 33px;
   }
 
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 731px;
+  }
+
+  .u-section-1 .u-text-1 {
     width: 455px;
     margin-top: 31px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .u-section-1 .u-text-6 {
+  .u-section-1 .u-text-2 {
     margin-top: 19px;
   }
 
@@ -661,43 +654,79 @@
     width: 280px;
   }
 
-  .u-section-1 .u-text-8 {
-    margin-top: 18px;
+  .u-section-1 .u-text-3 {
+    margin-top: 24px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 27px;
   }
 
   .u-section-1 .u-form-2 {
     width: 280px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 296px;
+  .u-section-1 .u-text-5 {
+    margin-top: 27px;
   }
 
-  .u-section-1 .u-text-10 {
-    margin-top: 19px;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 348px;
   }
 
-  .u-section-1 .u-text-13 {
+  .u-section-1 .u-text-6 {
+    margin-top: 30px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 30px;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-top: 23px;
+  }
+
+  .u-section-1 .u-text-9 {
     margin-top: 34px;
     margin-right: 233px;
     margin-left: 422px;
   }
 
-  .u-section-1 .u-text-14 {
+  .u-section-1 .u-text-10 {
     margin-right: 382px;
     margin-left: 231px;
   }
 
-  .u-section-1 .u-text-15 {
+  .u-section-1 .u-text-11 {
     margin-top: 32px;
     margin-right: 365px;
     margin-left: 231px;
   }
 
-  .u-section-1 .u-text-16 {
+  .u-section-1 .u-text-12 {
     margin-right: 241px;
     margin-bottom: -220px;
     margin-left: 430px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 577px;
+  }
+
+  .u-section-1 .u-container-layout-3 {
+    padding: 0 10px;
+  }
+
+  .u-section-1 .u-group-1 {
+    min-height: 352px;
+    width: 424px;
+    margin-top: 131px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-14 {
+    font-size: 1rem;
   }
 }
 
@@ -711,54 +740,43 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 467px;
-  }
-
-  .u-section-1 .u-group-1 {
-    min-height: 428px;
-    width: 307px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 26px;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-top: 35px;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
     min-height: 713px;
   }
 
-  .u-section-1 .u-text-5 {
-    width: 221px;
+  .u-section-1 .u-text-1 {
+    width: 275px;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 24px;
   }
 
   .u-section-1 .u-form-1 {
     margin-top: 8px;
   }
 
-  .u-section-1 .u-text-8 {
-    margin-top: 15px;
+  .u-section-1 .u-text-3 {
+    margin-top: 21px;
   }
 
-  .u-section-1 .u-text-9 {
+  .u-section-1 .u-text-4 {
+    margin-top: 18px;
+  }
+
+  .u-section-1 .u-text-5 {
     width: 241px;
-    margin-top: 19px;
+    margin-top: 21px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .u-section-1 .u-layout-cell-3 {
+  .u-section-1 .u-layout-cell-2 {
     min-height: 343px;
   }
 
-  .u-section-1 .u-text-10 {
-    margin-top: 13px;
+  .u-section-1 .u-text-6 {
+    margin-top: 0;
   }
 
   .u-section-1 .u-form-3 {
@@ -766,30 +784,53 @@
     margin-top: 9px;
   }
 
-  .u-section-1 .u-text-12 {
+  .u-section-1 .u-text-7 {
+    margin-top: 27px;
+  }
+
+  .u-section-1 .u-text-8 {
     margin-top: 21px;
   }
 
-  .u-section-1 .u-text-13 {
+  .u-section-1 .u-text-9 {
     margin-top: 29px;
     margin-right: 38px;
     margin-left: 226px;
   }
 
-  .u-section-1 .u-text-14 {
+  .u-section-1 .u-text-10 {
     margin-right: 186px;
     margin-left: 35px;
   }
 
-  .u-section-1 .u-text-15 {
+  .u-section-1 .u-text-11 {
     margin-top: 37px;
     margin-right: 168px;
     margin-left: 35px;
   }
 
-  .u-section-1 .u-text-16 {
+  .u-section-1 .u-text-12 {
     margin-right: 46px;
     margin-bottom: -176px;
     margin-left: 234px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 498px;
+  }
+
+  .u-section-1 .u-group-1 {
+    min-height: 428px;
+    width: 313px;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-text-15 {
+    width: auto;
+    margin-top: 26px;
+  }
+
+  .u-section-1 .u-text-16 {
+    margin-top: 35px;
   }
 }
