--- a/templates/Choose-the-angle.html
+++ b/templates/Choose-the-angle.html
@@ -12,55 +12,29 @@
     <link id="u-theme-google-font" rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i|Lobster:400">
+          href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i|Lobster:400|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 {% endblock %}
-
 {% block content %}"Choose the angle"{% endblock %}
 
 {% block section1 %}
     <section
             class="skrollable u-clearfix u-image u-lightbox u-parallax u-shading u-section-1" id="choose-the-angle"
-         data-image-width="1553" data-image-height="1000">
+            data-image-width="1553" data-image-height="1000">
         <div class="u-clearfix u-sheet u-sheet-1">
             <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
                 <div class="u-layout">
+
                     <div class="u-layout-row">
                         <div class="u-size-40">
                             <div class="u-layout-row">
+
                                 <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
-                                <div class="u-container-layout u-valign-middle-xs u-valign-top-sm u-container-layout-1">
-                                    <div class="u-container-style u-expanded-width-md u-expanded-width-sm u-group u-group-1"
-                                             data-animation-name="" data-animation-duration="0"
-                                             data-animation-direction="">
-                                            <div class="u-container-layout u-container-layout-2">
-                                                <h4 class="u-align-center u-text u-text-palette-3-light-2 u-text-1">
-                                                    Comments</h4>
-                                            <h5 class="u-align-justify u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-2">
-                                                    &nbsp; We use data about knives with different brands and steel
-                                                    blades.
-                                                    Our base with over forty knives allows proposing appropriate angles
-                                                    for
-                                                    grinding. </h5>
-                                            <h5 class="u-align-left u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-3">
-                                                    &nbsp; &nbsp; &nbsp; ​We can use any of 3 steps:<br>
-                                                    <br>Step 1 - brand or brand and series or steel<br>
-                                                    <br>Step 2 - carbon of steel or carbon and&nbsp;additives (CrMoV)
-                                                    <br>
-                                                    <br>Step 3 - category from low quality to premium_quality
-                                                </h5>
-                                            <h5 class="u-align-justify u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-4">
-                                                    &nbsp; &nbsp;In the end, we will suggest an angle for grinding and
-                                                    honing.</h5>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="u-container-style u-layout-cell u-shape-rectangle u-size-30 u-layout-cell-2">
-                                <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-3">
-                                        <h4 class="u-align-center u-text u-text-palette-3-light-2 u-text-5"> Use next
-                                            step
-                                            for choo​​si​ng the ang​le</h4>
-                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-6">Step 1</h5>
+                                <div class="u-container-layout u-valign-top-xxl u-container-layout-1">
+                                        <h4 class="u-align-center u-text u-text-palette-3-light-2 u-text-1"> Use next
+                                            step&nbsp;<br>for
+                                            choo​​si​ng the ang​le
+                                        </h4>
+                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-2">Step 1</h5>
                                         <div class="u-form u-form-1">
                                             <form action="" method="POST"
                                                   class="u-clearfix u-form-custom-backend u-form-spacing-0 u-form-vertical u-inner-form"
@@ -94,7 +68,6 @@
                                                     <div class="u-form-select-wrapper">
                                                         <select id="select-fc7c" name="series"
                                                                 class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white u-input-2">
-
                                                             <option value="">series unknown</option>
                                                             {% for knife_ser in model %}
                                                                 {% if knife_ser.series != None %}
@@ -117,7 +90,6 @@
                                                     <div class="u-form-select-wrapper">
                                                         <select id="select-5a8a" name="steel"
                                                                 class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white u-input-3">
-
                                                             <option value="">steel unknown</option>
                                                             {% for knife_st in model %}
                                                                 {% if knife_st.steel != None %}
@@ -139,18 +111,16 @@
                                                 </div>
                                             </form>
                                         </div>
-                                    {% if message_step1 == 'Not found, try next step' %}
-                                        <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-2-light-1 u-text-7"
-                                            data-animation-name="" data-animation-duration="0" data-animation-delay="0"
-                                            data-animation-direction="">{{ message_step1 }}</h4>
-                                    {% elif not message_step1 %}
-                                        <br>
-                                    {% else %}
-                                        <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-7"
-                                            data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0"
-                                            data-animation-direction="">{{ message_step1}}</h4>
-                                    {% endif %}
-                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-8">Step 2<br>
+                                        {% if message_step1 %}
+                                            <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-3"
+                                                data-animation-name="bounceIn" data-animation-duration="1000"
+                                                data-animation-delay="0"
+                                                data-animation-direction="">{{ message_step1 }}</h4>
+                                        {% else %}
+                                            <br>
+                                            <br>
+                                        {% endif %}
+                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-4">Step 2<br>
                                         </h5>
                                         <div class="u-form u-form-2">
                                             <form action="" method="POST"
@@ -185,22 +155,19 @@
                                                 </div>
                                             </form>
                                         </div>
-                                {% if message_step2 %}
-                                    <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-9"
-                                            data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0"
-                                            data-animation-direction="">{{ message_step2 }}</h4>
-                                {% else %}
-                                <br>
-                                {% endif %}
+                                        {% if message_step2 %}
+                                            <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-5"
+                                                data-animation-name="bounceIn" data-animation-duration="1000"
+                                                data-animation-delay="0"
+                                                data-animation-direction="">{{ message_step2 }}</h4>
+                                        {% else %}
+                                            <br>
+                                        {% endif %}
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="u-size-20">
-                            <div class="u-layout-col">
-                                <div class="u-container-style u-layout-cell u-shape-rectangle u-size-60 u-layout-cell-3">
-                                    <div class="u-container-layout u-container-layout-4">
-                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-10">Step 3</h5>
+                                <div class="u-container-style u-layout-cell u-shape-rectangle u-size-30 u-layout-cell-2">
+                                    <div class="u-container-layout u-container-layout-2">
+                                        <h5 class="u-align-center u-text u-text-palette-4-light-1 u-text-6">Step 3</h5>
                                         <div class="u-form u-form-3">
                                             <form action="" method="POST"
                                                   class="u-clearfix u-form-custom-backend u-form-spacing-0 u-form-vertical u-inner-form"
@@ -236,40 +203,69 @@
                                                 <div class="u-align-center u-form-group u-form-submit u-label-top u-form-group-9">
                                                     <input type="submit" value="submit"
                                                            class="u-active-none u-border-2 u-border-active-palette-2-dark-1 u-border-hover-palette-4-light-1 u-border-palette-3-light-2 u-btn u-btn-submit u-button-style u-custom-font u-heading-font u-hover-none u-none u-text-hover-palette-4-light-1 u-text-palette-3-light-2 u-btn-3">
-                                                    <!--{#                                                <input type="submit" value="submit" class="u-form-control-hidden">#}-->
                                                 </div>
-                                                <div class="u-form-send-message u-form-send-success">look our suggestion
-                                                </div>
-                                                <div class="u-form-send-error u-form-send-message">make a choice</div>
-                                                <input type="hidden" value="" name="recaptchaResponse">
                                             </form>
                                         </div>
-                                    {% if message_step3 %}
-                                    <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-11"
-                                            data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0"
-                                            data-animation-direction="">{{ message_step3 }}</h4>
-                                    {% else %}
-                                        <br>
-                                    {% endif %}
-                                        <h3 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-palette-3-light-2 u-text-12">
+                                        {% if message_step3 %}
+                                            <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-3 u-text-7"
+                                                data-animation-name="bounceIn" data-animation-duration="1000"
+                                                data-animation-delay="0"
+                                                data-animation-direction="">{{ message_step3 }}</h4>
+                                        {% else %}
+                                            <br>
+                                            <br>
+                                        {% endif %}
+                                        <h3 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-palette-3-light-2 u-text-8">
                                             Suggestion</h3>
-                                        <h3 class="u-align-center u-custom-font u-heading-font u-text u-text-palette-3-light-2 u-text-13"
+                                        <h3 class="u-align-center u-custom-font u-heading-font u-text u-text-palette-3-light-2 u-text-9"
                                             data-animation-name="counter" data-animation-event="scroll"
                                             data-animation-duration="3000">{{ knife.angle|default:angle|floatformat:1 }}<br>
                                         </h3>
-                                        <h4 class="u-custom-font u-font-playfair-display u-text u-text-palette-4-light-1 u-text-14">
+                                        <h4 class="u-custom-font u-font-playfair-display u-text u-text-palette-4-light-1 u-text-10">
                                             An<span style="font-weight: 700;"></span>gle&nbsp; (do<span
                                                 style="font-weight: 400;"></span>uble)
                                         </h4>
-                                        <h4 class="u-text u-text-palette-4-light-1 u-text-15"> Honing
+                                        <h4 class="u-text u-text-palette-4-light-1 u-text-11"> Honing
                                             additional&nbsp;<br>for
                                             debarring&nbsp;
                                         </h4>
-                                        <h3 class="u-align-center u-custom-font u-heading-font u-text u-text-palette-3-light-2 u-text-16"
+                                        <h3 class="u-align-center u-custom-font u-heading-font u-text u-text-palette-3-light-2 u-text-12"
                                             data-animation-name="counter" data-animation-event="scroll"
                                             data-animation-duration="3000">
                                             {{ knife.honing_add|default:honing_add|floatformat:1 }}
                                         </h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="u-size-20">
+                            <div class="u-layout-col">
+                                <div class="u-container-style u-layout-cell u-shape-rectangle u-size-60 u-layout-cell-3">
+                                <div class="u-container-layout u-valign-bottom-xs u-container-layout-3">
+                                    <div class="u-container-style u-expanded-width-lg u-expanded-width-md u-group u-group-1"
+                                             data-animation-name="" data-animation-duration="0"
+                                             data-animation-direction="">
+                                            <div class="u-container-layout u-container-layout-4">
+                                                <h4 class="u-align-center u-text u-text-palette-3-light-2 u-text-13">
+                                                    Comments</h4>
+                                                <h5 class="u-align-justify u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-14">
+                                                    &nbsp; We use data about knives with different brands and steel
+                                                    blades.
+                                                    Our base with over forty knives allows proposing appropriate angles
+                                                    for
+                                                    grinding. </h5>
+                                                <h5 class="u-align-left u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-15">
+                                                    &nbsp; &nbsp; &nbsp; ​We can use any of 3 steps:<br>
+                                                    <br>Step 1 - brand or brand and series or steel<br>
+                                                    <br>Step2 - carbon of steel or carbon and&nbsp;additives (CrMoV)
+                                                    <br>
+                                                    <br>Step3 - category from low quality to premium_quality
+                                                </h5>
+                                                <h5 class="u-align-justify u-custom-font u-font-raleway u-text u-text-palette-3-light-2 u-text-16">
+                                                    &nbsp; &nbsp;In the end, we will suggest an angle for grinding and
+                                                    honing.</h5>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
