--- a/templates/Main.html
+++ b/templates/Main.html
@@ -26,7 +26,7 @@
                 Stay S​harp</h1>
             {% if user.username %}
                 <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-palette-4-light-2 u-text-2">
-                    Welcomes {{ user.username }} ({{ num_visits }})</h3>
+                    Welcomes {{ user.username }}</h3>
             {% endif %}
             <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-palette-2-light-2 u-text-6">
                 {% if messages %}
