--- a/info_ss/templates/email_info/email_report_week.html
+++ b/info_ss/templates/email_info/email_report_week.html
@@ -1,8 +1,7 @@
 {% autoescape off %}
-I hope it is good morning.
-   now {{ today }}
+I hope it is good morning. now {{ today }}
 
-For last day
+For last week
 
     {{ visitors_num }} visitors including {{ most_visitor }} ({{ visits_of_most_visitor }})
     choose the angle visits - {{ choose_visits }}
