--- a/info_ss/templates/email_info/email_report_registration.html
+++ b/info_ss/templates/email_info/email_report_registration.html
@@ -1,6 +1,5 @@
 {% autoescape off %}
-I hope it is good morning.
-   now {{ today }}
+I hope it is good morning, now {{ today }}
 
 For this time {{ users_num }} users registered
 
