--- a/templates/Base.html
+++ b/templates/Base.html
@@ -32,7 +32,7 @@
 <body class="u-body u-overlap u-overlap-contrast u-xxl-mode" data-lang="ru">
 <header class="u-clearfix u-header u-sticky u-sticky-0046 u-header" id="section1-1">
     <div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1">
+        <a class="u-image u-logo u-image-1">
             <img src="{% static 'images/stay_sharp/default-logo.png' %}" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
